CSS: prevent line-breaks inside of tags
Makes them "display: inline-block"

--- a/css/website.css
+++ b/css/website.css
@@ -103,6 +103,7 @@ header {
   border-radius: 0.3rem;
   padding: 0 0.3rem;
   margin: 0 0.3rem;
+  display: inline-block;
 }
 
 /*******************
